--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 
           <section class="sobre-nos">
             <div class="container">
-              <!-- Galeria de Fotos -->
               <div class="galeria-fotos">
                 <div class="linha-superior">
                   <img src="img/imagemsobre1.png" alt="Foto 1">
@@ -76,7 +75,6 @@
                 </div>
               </div>
         
-              <!-- Texto "Sobre Nós" -->
               <div class="conteudo">
                 <h2>Sobre Nós</h2>
                 <p>
@@ -88,6 +86,53 @@
           </section>
 
     </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>Class Turismo</h3>
+                <p>Sua agência de viagens completa, transformando sonhos em destinos inesquecíveis.</p>
+                <div class="contact-info">
+                    <span><i class="fas fa-phone"></i> (11) 98765-4321</span>
+                    <span><i class="fas fa-envelope"></i> contato@classturismo.com</span>
+                </div>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-section links">
+                <h3>Links Úteis</h3>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="/">Depoimentos</a></li>
+                    <li><a href="/">Quem Somos</a></li>
+                    <li><a href="/">Contato</a></li>
+                    <li><a href="/">Pacotes</a></li>
+                </ul>
+            </div>
+            <div class="footer-section credits">
+                <h3>Créditos do Site</h3>
+                <p><strong>Nome do projeto:</strong> Projeto de extensão: Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Nome do professor responsável:</strong> Prof. Dr. Elvio Gilberto da Silva</p>
+                <p><strong>Nome completo dos integrantes:</strong></p>
+                <ul>
+                    <li>[Nome Completo do Integrante 1]</li>
+                    <li>[Nome Completo do Integrante 2]</li>
+                    <li>[Nome Completo do Integrante 3]</li>
+                    <li>[Nome Completo do Integrante 4]</li>
+                    <li>[Nome Completo do Integrante 5]</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2025 Class Turismo. Todos os direitos reservados.
+        </div>
+    </footer>
+
     <script src="mobile.navbar.js"></script>
 </body>
 </html>
