--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             </div>
             <div class="footer-section credits">
                 <h3>Créditos do Site</h3>
-                <p><strong>Nome do projeto:</strong> Projeto de extensão: Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Projeto de extensão:</strong> Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Desenvolvimento:</strong> <br><img src="img/unisagrado extensão.jpg" alt="Logo Unisagrado Extensão" style="width: 150px; vertical-align: middle;"></p>
                 <p><strong>Nome do professor responsável:</strong> Prof. Dr. Elvio Gilberto da Silva</p>
                 <p><strong>Nome completo dos integrantes:</strong></p>
                 <ul>
