--- a/index.html
+++ b/index.html
@@ -116,16 +116,15 @@
             </div>
             <div class="footer-section credits">
                 <h3>Créditos do Site</h3>
-                <p><strong>Projeto de extensão:</strong> Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Projeto de extensão:</strong></strong><br>Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
                 <p><strong>Desenvolvimento:</strong> <br><img src="img/unisagrado extensão.jpg" alt="Logo Unisagrado Extensão" style="width: 150px; vertical-align: middle;"></p>
                 <p><strong>Nome do professor responsável:</strong> Prof. Dr. Elvio Gilberto da Silva</p>
                 <p><strong>Nome completo dos integrantes:</strong></p>
                 <ul>
-                    <li>[Nome Completo do Integrante 1]</li>
-                    <li>[Nome Completo do Integrante 2]</li>
-                    <li>[Nome Completo do Integrante 3]</li>
-                    <li>[Nome Completo do Integrante 4]</li>
-                    <li>[Nome Completo do Integrante 5]</li>
+                    <li>Cauê Mateus de Araujo</li>
+                    <li>Edison Aparecido Travain Simoes Filho</li>
+                    <li>Giovane Stopa Cordeiro</li>
+                    <li>Giovanna Ferrari Gazzola</li>                    
                 </ul>
             </div>
         </div>
