--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <ul class="nav-list">
                 <li class="hide-on-desktop"><a href="#home">Home</a></li>
                 <li><a href="#galeria">Galeria</a></li>
-                <li><a href="/">Depoimentos</a></li>
-                <li><a href="/">Quem Somos</a></li>
-                <li><a href="/">Contato</a></li>
-                <li><a href="/">Pacotes</a></li>
+                <li><a href="#depoimentos">Depoimentos</a></li> 
+                <li><a href="#sobre-nos">Quem Somos</a></li> 
+                <li><a href="#contato">Contato</a></li>     
+                <li><a href="#pacotes">Pacotes</a></li>     
             </ul>
         </nav>
 
@@ -63,7 +63,7 @@
           </section>
 
 
-          <section class="sobre-nos">
+          <section id="sobre-nos" class="sobre-nos"> 
             <div class="container">
               <div class="galeria-fotos">
                 <div class="linha-superior">
@@ -108,15 +108,15 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#galeria">Galeria</a></li>
-                    <li><a href="/">Depoimentos</a></li>
-                    <li><a href="/">Quem Somos</a></li>
-                    <li><a href="/">Contato</a></li>
-                    <li><a href="/">Pacotes</a></li>
+                    <li><a href="#depoimentos">Depoimentos</a></li>
+                    <li><a href="#sobre-nos">Quem Somos</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#pacotes">Pacotes</a></li>
                 </ul>
             </div>
             <div class="footer-section credits">
                 <h3>Créditos do Site</h3>
-                <p><strong>Projeto de extensão:</strong></strong><br>Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Nome do projeto:</strong> Projeto de extensão: Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
                 <p><strong>Desenvolvimento:</strong> <br><img src="img/unisagrado extensão.jpg" alt="Logo Unisagrado Extensão" style="width: 150px; vertical-align: middle;"></p>
                 <p><strong>Nome do professor responsável:</strong> Prof. Dr. Elvio Gilberto da Silva</p>
                 <p><strong>Nome completo dos integrantes:</strong></p>
@@ -124,7 +124,7 @@
                     <li>Cauê Mateus de Araujo</li>
                     <li>Edison Aparecido Travain Simoes Filho</li>
                     <li>Giovane Stopa Cordeiro</li>
-                    <li>Giovanna Ferrari Gazzola</li>                    
+                    <li>Giovanna Ferrari Gazzola</li> 
                 </ul>
             </div>
         </div>
