--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                     <li>Cauê Mateus de Araujo</li>
                     <li>Edison Aparecido Travain Simoes Filho</li>
                     <li>Giovane Stopa Cordeiro</li>
-                    <li>Giovanna Ferrari Gazzola</li> 
+                    <li>Giovanna Ferrari Gazzola</li>
+                    <li>João Gabriel Pereira de Oliveira</li> 
                 </ul>
             </div>
         </div>
