remove botão ver mais

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                   <img src="img/galeria3 .jpg" alt="galeria3">
                   <img src="img/galeria4.jpg" alt="galeria4">
                   <img src="img/galeria5.jpg" alt="galeria5">
-                </div>
+                <!-- </div>
                 <div class="botao-ver-mais">
                   <button>Ver mais →</button>
-                </div>
+                </div> -->
             </div>
           </section>
 
