remove linkedin adicona links remove ver mais

--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
                   <img src="img/galeria2.jpg" alt="galeria2">
                   <img src="img/galeria3 .jpg" alt="galeria3">
                   <img src="img/galeria4.jpg" alt="galeria4">
-                  <img src="img/galeria5.jpg" alt="galeria5">
-                <!-- </div>
-                <div class="botao-ver-mais">
-                  <button>Ver mais →</button>
-                </div> -->
+                  <img src="img/galeria5.jpg" alt="galeria5">                
             </div>
           </section>
 
@@ -97,10 +93,10 @@
                     <span><i class="fas fa-envelope"></i> contato@classturismo.com</span>
                 </div>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.facebook.com/classviagens/?locale=pt_BR"><i class="fab fa-facebook-f"></i></a>
+                    <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
+                    <a href="https://www.instagram.com/class.turismo/"><i class="fab fa-instagram"></i></a>
+                    <!-- <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
             <div class="footer-section links">
@@ -109,8 +105,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#depoimentos">Depoimentos</a></li>
-                    <li><a href="#sobre-nos">Quem Somos</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#sobre-nos">Quem Somos</a></li>                    
                     <li><a href="#pacotes">Pacotes</a></li>
                 </ul>
             </div>
