--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="nav-list">
                 <li class="hide-on-desktop"><a href="#home">Home</a></li>
                 <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#depoimentos">Depoimentos</a></li> 
+                <!-- <li><a href="#depoimentos">Depoimentos</a></li>  -->
                 <li><a href="#sobre-nos">Quem Somos</a></li> 
                 <li><a href="#contato">Contato</a></li>     
                 <li><a href="#pacotes">Pacotes</a></li>     
@@ -103,8 +103,7 @@
                 <h3>Links Úteis</h3>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#galeria">Galeria</a></li>
-                    <li><a href="#depoimentos">Depoimentos</a></li>
+                    <li><a href="#galeria">Galeria</a></li>                    
                     <li><a href="#sobre-nos">Quem Somos</a></li>                    
                     <li><a href="#pacotes">Pacotes</a></li>
                 </ul>
