contato pula pro footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#galeria">Galeria</a></li>
                 <!-- <li><a href="#depoimentos">Depoimentos</a></li>  -->
                 <li><a href="#sobre-nos">Quem Somos</a></li> 
-                <li><a href="#contato">Contato</a></li>     
+                <li><a href="#footer">Contato</a></li>   
                 <li><a href="#pacotes">Pacotes</a></li>     
             </ul>
         </nav>
@@ -83,7 +83,7 @@
 
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-content">
             <div class="footer-section about">
                 <h3>Class Turismo</h3>
