adiciona quebras de linha

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             </div>
             <div class="footer-section credits">
                 <h3>Créditos do Site</h3>
-                <p><strong>Projeto de extensão:</strong>  Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
+                <p><strong>Projeto de extensão:</strong><br>  Fábrica de software: Desenvolvimento de websites, aplicativos e jogos.</p>
                 <p><strong>Desenvolvimento:</strong> <br><img src="img/unisagrado extensão.jpg" alt="Logo Unisagrado Extensão" style="width: 200px; vertical-align: middle;"></p>
-                <p><strong>Nome do professor responsável:</strong> Prof. Dr. Elvio Gilberto da Silva</p>
+                <p><strong>Nome do professor responsável:</strong><br> Prof. Dr. Elvio Gilberto da Silva</p>
                 <p><strong>Nome completo dos integrantes:</strong></p>
                 <ul>
                     <li>Cauê Mateus de Araujo</li>
